--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@
       <div class="social-links">
         <a href="https://www.instagram.com/1timeinvest/" class="social-icon"><img src="assets/instagram_icon.png"
             alt="Instagram"></a>
-        <a href="https://www.youtube.com/channel/UCZ36WATU4kuENI3yvuEAlXA" class="social-icon"><img
+        <a href="https://www.facebook.com/1Timeinvestimentos" class="social-icon"><img
             src="assets/facebook_icon.png" alt="Facebook"></a>
-        <a href="https://www.facebook.com/1Timeinvestimentos" class="social-icon"><img src="assets/linkedin_icon.png"
+        <a href="https://www.linkedin.com/company/1-time-invest" class="social-icon"><img src="assets/linkedin_icon.png"
             alt="LinkedIn"></a>
-        <a href="https://www.linkedin.com/company/1-time-invest" class="social-icon"><img src="assets/youtube_icon.png"
+        <a href="https://www.youtube.com/channel/UCZ36WATU4kuENI3yvuEAlXA" class="social-icon"><img src="assets/youtube_icon.png"
             alt="YouTube"></a>
       </div>
       <div id="borderBottom"></div>
