Fix: update whatsapp link

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       </div>
       <div id="borderBottom"></div>
     </div>
-    <a href="https://w.app/1timeinvest" target=”_blank”>
+    <a href="https://wa.me/11941997193" target=”_blank”>
       <button class="contact-button">ENTRE EM CONTATO</button>
     </a>
     <p class="footer-text">
