--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
       <i class="fa fa-bars"></i>
     </a>
     <div class="logo">
-      <img src="assets/full_logo_one_time_black.png" alt="One time invest">
+      <a href="/index.html"><img src="assets/full_logo_one_time_black.png" alt="One time invest"></a>
     </div>
     <nav id="navBar">
       <ul>
         <li><a href="#sobre">SOBRE</a></li>
         <li><a href="#diferencial">DIFERENCIAL</a></li>
         <li><a href="#assessoria">ASSESSORIA</a></li>
-        <li><a href="#equipe">EQUIPE</a></li>
+        <li><a href="/equipe.html">EQUIPE</a></li>
         <li><a href="#trabalhe">TRABALHE CONOSCO</a></li>
       </ul>
     </nav>
@@ -245,12 +245,12 @@
       <div class="social-links">
         <a href="https://www.instagram.com/1timeinvest/" class="social-icon"><img src="assets/instagram_icon.png"
             alt="Instagram"></a>
-        <a href="https://www.facebook.com/1Timeinvestimentos" class="social-icon"><img
-            src="assets/facebook_icon.png" alt="Facebook"></a>
+        <a href="https://www.facebook.com/1Timeinvestimentos" class="social-icon"><img src="assets/facebook_icon.png"
+            alt="Facebook"></a>
         <a href="https://www.linkedin.com/company/1-time-invest" class="social-icon"><img src="assets/linkedin_icon.png"
             alt="LinkedIn"></a>
-        <a href="https://www.youtube.com/channel/UCZ36WATU4kuENI3yvuEAlXA" class="social-icon"><img src="assets/youtube_icon.png"
-            alt="YouTube"></a>
+        <a href="https://www.youtube.com/channel/UCZ36WATU4kuENI3yvuEAlXA" class="social-icon"><img
+            src="assets/youtube_icon.png" alt="YouTube"></a>
       </div>
       <div id="borderBottom"></div>
     </div>
