Fix clientes number

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <li class="largura-item">
             <h1 style="font-size: 64px;">
               +<span id="animation-clientes">0
-              </span><br>MIL
+              </span>
             </h1>
             <p style="font-size: 20px;">Clientes que crescem conosco</p>
           </li>
