Fix: logo e endereço

--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
       <button class="contact-button">ENTRE EM CONTATO</button>
     </a>
     <p class="footer-text">
-      1 Time Invest Agente Autônomo de Investimentos Ltda - CNPJ: 24.138.883/0001-69 Rua Minas Gerais, 332 - 5º andar -
-      Higienópolis CEP: 01244-010A -1 Time Invest Agente Autônomo de Investimentos Ltda. é uma empresa de agentes
-      autônomos de investimento devidamente registrada na Comissão de Valores Mobiliários (CVM), na forma da Resolução
-      16/2021. A 1 Time Invest Agente Autônomo de Investimentos Ltda. atua no mercado financeiro através da XP
+      1 Time Invest Agente Autônomo de Investimentos Ltda - CNPJ: 24.138.883/0001-69 Rua Teixeira da Silva, 660 - 13º
+      Andar - Paraíso, São Paulo - SP, 04002-609 -1 Time Invest Agente Autônomo de Investimentos Ltda. é uma empresa de
+      agentes autônomos de investimento devidamente registrada na Comissão de Valores Mobiliários (CVM), na forma da
+      Resolução 16/2021. A 1 Time Invest Agente Autônomo de Investimentos Ltda. atua no mercado financeiro através da XP
       Investimentos CCTVM S/A, o que pode ser verificado através do site da CVM (www.cvm.gov.br > Agentes Autônomos >
       Relação dos Agentes Autônomos contratados por uma Instituição Financeira > Corretoras > XP Investimentos) ou
       através do site da ANCORD para escritórios credenciados a partir de outubro de 2012
