Add cookie management tool

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="adopt-website-id" content="32fa761c-86ea-40ec-b499-abec8d12899e" />
+  <script src="//tag.goadopt.io/injector.js?website_code=32fa761c-86ea-40ec-b499-abec8d12899e"
+    class="adopt-injector"></script>
   <title>1 Time Invest</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="/assets/favicon-32.jpeg" type="image/jpeg" sizes="32x32">
