--- a/equipe.html
+++ b/equipe.html
@@ -1,106 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>1 Time Invest</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="icon"
+      href="/assets/favicon-32.jpeg"
+      type="image/jpeg"
+      sizes="32x32"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>1 Time Invest</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="/assets/favicon-32.jpeg" type="image/jpeg" sizes="32x32">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-</head>
-
-<body>
-  <header>
-    <a href="javascript:void(0);" class="icon" onclick="toggleNavMenu()">
-      <i class="fa fa-bars"></i>
-    </a>
-    <div class="logo">
-      <a href="/index.html"><img src="assets/full_logo_one_time_black.png" alt="One time invest"></a>
-    </div>
-    <nav id="navBar">
-      <ul>
-        <li><a href="/index.html#sobre">SOBRE</a></li>
-        <li><a href="/index.html#diferencial">DIFERENCIAL</a></li>
-        <li><a href="/index.html#assessoria">ASSESSORIA</a></li>
-        <li><a href="#equipe">EQUIPE</a></li>
-        <li><a href="/index.html#trabalhe">TRABALHE CONOSCO</a></li>
-      </ul>
-    </nav>
-    <a href="https://cadastro.xpi.com.br/desktop/step/1?assessor=A68126" target=”_blank”>
-      <button class="cta-button regular-button">
-        ABRA SUA CONTA
-      </button>
-    </a>
-  </header>
-
-  <main>
-    <section id="equipe" class="content-section">
-      <div id="img-equipe-grid" class="img-equipe-grid">
-
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <div id="footer-box" class="footer-content">
+  <body>
+    <header>
+      <a href="javascript:void(0);" class="icon" onclick="toggleNavMenu()">
+        <i class="fa fa-bars"></i>
+      </a>
       <div class="logo">
-        <img src="assets/logo_one_time_rgb.png" alt="One time invest">
+        <a href="/index.html"
+          ><img src="assets/full_logo_one_time_black.png" alt="One time invest"
+        /></a>
       </div>
-      <p style="font-weight: 600; margin-bottom: 19px;">
-        <span style="color: #FFD028; font-style: italic;">
-          Nos acompanhe
-        </span>
-        <span>
-          nas redes sociais
-        </span>
+      <nav id="navBar">
+        <ul>
+          <li><a href="/index.html#sobre">SOBRE</a></li>
+          <li><a href="/index.html#diferencial">DIFERENCIAL</a></li>
+          <li><a href="/index.html#assessoria">ASSESSORIA</a></li>
+          <li><a href="#equipe">EQUIPE</a></li>
+          <li><a href="/index.html#trabalhe">TRABALHE CONOSCO</a></li>
+        </ul>
+      </nav>
+      <a
+        href="https://cadastro.xpi.com.br/desktop/step/1?assessor=A68126"
+        target="”_blank”"
+      >
+        <button class="cta-button regular-button">ABRA SUA CONTA</button>
+      </a>
+    </header>
+
+    <main>
+      <section id="equipe" class="content-section">
+        <div id="img-equipe-grid" class="img-equipe-grid"></div>
+      </section>
+    </main>
+
+    <footer>
+      <div id="footer-box" class="footer-content">
+        <div class="logo">
+          <img src="assets/logo_one_time_rgb.png" alt="One time invest" />
+        </div>
+        <p style="font-weight: 600; margin-bottom: 19px">
+          <span style="color: #ffd028; font-style: italic">
+            Nos acompanhe
+          </span>
+          <span> nas redes sociais </span>
+        </p>
+        <div class="social-links">
+          <a href="https://www.instagram.com/1timeinvest/" class="social-icon"
+            ><img src="assets/instagram_icon.png" alt="Instagram"
+          /></a>
+          <a
+            href="https://www.facebook.com/1Timeinvestimentos"
+            class="social-icon"
+            ><img src="assets/facebook_icon.png" alt="Facebook"
+          /></a>
+          <a
+            href="https://www.linkedin.com/company/1-time-invest"
+            class="social-icon"
+            ><img src="assets/linkedin_icon.png" alt="LinkedIn"
+          /></a>
+          <a
+            href="https://www.youtube.com/channel/UCZ36WATU4kuENI3yvuEAlXA"
+            class="social-icon"
+            ><img src="assets/youtube_icon.png" alt="YouTube"
+          /></a>
+        </div>
+        <div id="borderBottom"></div>
+      </div>
+      <a href="https://wa.me/11941997193" target="”_blank”">
+        <button class="contact-button">ENTRE EM CONTATO</button>
+      </a>
+      <p class="footer-text">
+        A 1 Time Invest Agente Autônomo de Investimentos Ltda., inscrita sob o
+        CNPJ: 24.138.883/0001-69 é uma empresa de Assessoria de Investimento
+        devidamente registrada na Comissão de Valores Mobiliários na forma da
+        Resolução CVM 178/23 (“Sociedade”), que mantém contrato de distribuição
+        de produtos financeiros com a XP Investimentos Corretora de Câmbio,
+        Títulos e Valores Mobiliários S.A. (“XP”) e pode, por conta e ordem dos
+        seus clientes, operar no mercado de capitais segundo a legislação
+        vigente. Na forma da legislação da CVM, o Assessor de Investimento não
+        pode administrar ou gerir o patrimônio de investidores. O investimento
+        em ações é um investimento de risco e rentabilidade passada não é
+        garantia de rentabilidade futura. Na realização de operações com
+        derivativos existe a possibilidade de perdas superiores aos valores
+        investidos, podendo resultar em significativas perdas patrimoniais A
+        Sociedade poderá exercer atividades complementares relacionadas aos
+        mercados financeiro, securitário, de previdência e capitalização, desde
+        que não conflitem com a atividade de assessoria de investimentos,
+        podendo ser realizada por meio da pessoa jurídica acima descrita ou por
+        meio de pessoa jurídica terceira. Todas as atividades são prestadas
+        mantendo a devida segregação e em cumprimento ao quanto previsto nas
+        regras da CVM ou de outros órgãos reguladores e autorreguladores. Para
+        informações e dúvidas sobre produtos, contate seu assessor de
+        investimentos. Para reclamações, contate a Ouvidoria da XP pelo telefone
+        0800 722 3730.
       </p>
-      <div class="social-links">
-        <a href="https://www.instagram.com/1timeinvest/" class="social-icon"><img src="assets/instagram_icon.png"
-            alt="Instagram"></a>
-        <a href="https://www.facebook.com/1Timeinvestimentos" class="social-icon"><img src="assets/facebook_icon.png"
-            alt="Facebook"></a>
-        <a href="https://www.linkedin.com/company/1-time-invest" class="social-icon"><img src="assets/linkedin_icon.png"
-            alt="LinkedIn"></a>
-        <a href="https://www.youtube.com/channel/UCZ36WATU4kuENI3yvuEAlXA" class="social-icon"><img
-            src="assets/youtube_icon.png" alt="YouTube"></a>
-      </div>
-      <div id="borderBottom"></div>
-    </div>
-    <a href="https://wa.me/11941997193" target=”_blank”>
-      <button class="contact-button">ENTRE EM CONTATO</button>
-    </a>
-    <p class="footer-text">
-      1 Time Invest Agente Autônomo de Investimentos Ltda - CNPJ: 24.138.883/0001-69 Rua Teixeira da Silva, 660 - 13º
-      Andar - Paraíso, São Paulo - SP, 04002-609 -1 Time Invest Agente Autônomo de Investimentos Ltda. é uma empresa de
-      agentes autônomos de investimento devidamente registrada na Comissão de Valores Mobiliários (CVM), na forma da
-      Resolução 16/2021. A 1 Time Invest Agente Autônomo de Investimentos Ltda. atua no mercado financeiro através da XP
-      Investimentos CCTVM S/A, o que pode ser verificado através do site da CVM (www.cvm.gov.br > Agentes Autônomos >
-      Relação dos Agentes Autônomos contratados por uma Instituição Financeira > Corretoras > XP Investimentos) ou
-      através do site da ANCORD para escritórios credenciados a partir de outubro de 2012
-      (http://www.ancord.org.br/Website_Ancord/index.html > Agentes Autônomos > Consultas) ou através do site da própria
-      XP Investimentos CCTVM S/A (www.xpi.com.br > Encontre um escritório > Selecione abaixo o estado e a cidade que
-      deseja pesquisar > Veja a lista dos agentes autônomos). Na forma da legislação da CVM, o agente autônomo de
-      investimento não pode administrar ou gerir o patrimônio de investidores. O agente autônomo é um intermediário e
-      depende da autorização prévia do cliente para realizar operações no mercado financeiro. Esta mensagem, incluindo
-      os seus anexos, contém informações confidenciais destinadas a indivíduo e propósito específicos, sendo protegida
-      por lei. O investimento em ações é um investimento de risco e rentabilidade passada não é garantia de
-      rentabilidade futura. Na realização de operações com derivativos existe a possibilidade de perdas superiores aos
-      valores investidos, podendo resultar em significativas perdas patrimoniais. Para informações e dúvidas, favor
-      contatar seu agente de investimentos. Para reclamações, favor contatar a Ouvidoria da XP Investimentos no telefone
-      nº 0800-722-3730.
-    </p>
-    <p class="footer-text">
-      Alguma manifestação ou solicitação que não tenha sido atendida nos canais tradicionais na 1Time? Fale conosco por
-      meio de nossa OUVIDORIA: ouvidoria@onetimecorp.com.br
-    </p>
-  </footer>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script src="equipe.js"></script>
-
-</body>
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="equipe.js"></script>
+  </body>
 </html>
