--- a/index.html
+++ b/index.html
@@ -254,28 +254,29 @@
       <button class="contact-button">ENTRE EM CONTATO</button>
     </a>
     <p class="footer-text">
-      1 Time Invest Agente Autônomo de Investimentos Ltda - CNPJ: 24.138.883/0001-69 Rua Teixeira da Silva, 660 - 13º
-      Andar - Paraíso, São Paulo - SP, 04002-609 -1 Time Invest Agente Autônomo de Investimentos Ltda. é uma empresa de
-      agentes autônomos de investimento devidamente registrada na Comissão de Valores Mobiliários (CVM), na forma da
-      Resolução 16/2021. A 1 Time Invest Agente Autônomo de Investimentos Ltda. atua no mercado financeiro através da XP
-      Investimentos CCTVM S/A, o que pode ser verificado através do site da CVM (www.cvm.gov.br > Agentes Autônomos >
-      Relação dos Agentes Autônomos contratados por uma Instituição Financeira > Corretoras > XP Investimentos) ou
-      através do site da ANCORD para escritórios credenciados a partir de outubro de 2012
-      (http://www.ancord.org.br/Website_Ancord/index.html > Agentes Autônomos > Consultas) ou através do site da própria
-      XP Investimentos CCTVM S/A (www.xpi.com.br > Encontre um escritório > Selecione abaixo o estado e a cidade que
-      deseja pesquisar > Veja a lista dos agentes autônomos). Na forma da legislação da CVM, o agente autônomo de
-      investimento não pode administrar ou gerir o patrimônio de investidores. O agente autônomo é um intermediário e
-      depende da autorização prévia do cliente para realizar operações no mercado financeiro. Esta mensagem, incluindo
-      os seus anexos, contém informações confidenciais destinadas a indivíduo e propósito específicos, sendo protegida
-      por lei. O investimento em ações é um investimento de risco e rentabilidade passada não é garantia de
-      rentabilidade futura. Na realização de operações com derivativos existe a possibilidade de perdas superiores aos
-      valores investidos, podendo resultar em significativas perdas patrimoniais. Para informações e dúvidas, favor
-      contatar seu agente de investimentos. Para reclamações, favor contatar a Ouvidoria da XP Investimentos no telefone
-      nº 0800-722-3730.
-    </p>
-    <p class="footer-text">
-      Alguma manifestação ou solicitação que não tenha sido atendida nos canais tradicionais na 1Time? Fale conosco por
-      meio de nossa OUVIDORIA: ouvidoria@onetimecorp.com.br
+      A 1 Time Invest Agente Autônomo de Investimentos Ltda., inscrita sob o
+      CNPJ: 24.138.883/0001-69 é uma empresa de Assessoria de Investimento
+      devidamente registrada na Comissão de Valores Mobiliários na forma da
+      Resolução CVM 178/23 (“Sociedade”), que mantém contrato de distribuição
+      de produtos financeiros com a XP Investimentos Corretora de Câmbio,
+      Títulos e Valores Mobiliários S.A. (“XP”) e pode, por conta e ordem dos
+      seus clientes, operar no mercado de capitais segundo a legislação
+      vigente. Na forma da legislação da CVM, o Assessor de Investimento não
+      pode administrar ou gerir o patrimônio de investidores. O investimento
+      em ações é um investimento de risco e rentabilidade passada não é
+      garantia de rentabilidade futura. Na realização de operações com
+      derivativos existe a possibilidade de perdas superiores aos valores
+      investidos, podendo resultar em significativas perdas patrimoniais A
+      Sociedade poderá exercer atividades complementares relacionadas aos
+      mercados financeiro, securitário, de previdência e capitalização, desde
+      que não conflitem com a atividade de assessoria de investimentos,
+      podendo ser realizada por meio da pessoa jurídica acima descrita ou por
+      meio de pessoa jurídica terceira. Todas as atividades são prestadas
+      mantendo a devida segregação e em cumprimento ao quanto previsto nas
+      regras da CVM ou de outros órgãos reguladores e autorreguladores. Para
+      informações e dúvidas sobre produtos, contate seu assessor de
+      investimentos. Para reclamações, contate a Ouvidoria da XP pelo telefone
+      0800 722 3730.
     </p>
   </footer>
 
