--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       <button class="contact-button">ENTRE EM CONTATO</button>
     </a>
     <p class="footer-text">
-      A 1 Time Invest Agente Autônomo de Investimentos Ltda., inscrita sob o
+      A 1 Time Assessor de Investimentos Ltda., inscrita sob o
       CNPJ: 24.138.883/0001-69 é uma empresa de Assessoria de Investimento
       devidamente registrada na Comissão de Valores Mobiliários na forma da
       Resolução CVM 178/23 (“Sociedade”), que mantém contrato de distribuição
